--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-screens": "~2.9.0",
     "react-native-table-component": "^1.2.1",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-blur": "~8.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.4",
